--- a/VRChat/24/1291724.html
+++ b/VRChat/24/1291724.html
@@ -77,7 +77,7 @@
     <script src=
     "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "2+Ma7J243KNMOGlkhQo1QeaAep3Br0ZUrobN67sEakY="></script>
+    "nuyUM8WafKpXOFJxLFYUM4HMgQZjmNrFWjA4vhCDX9g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】メカ系イメージ尻尾「MTail」PB対応とシェーダー変更しました。","description":"メカ系イメージ尻尾「Mtail」\n\nVRC想定のメカイメージの尻尾です。\n\nPB対応とエンドボーン追加とシェーダーをUnlit_WF_Shadeに変更とテクスチャの追加をしました。\n\nTextureフォルダに.clipと.psdファイルがあります。\n\n\n\n　　説明\n\n事前にUnlit_WF_Shaderをインポートしておいてください。\n\nMtail20220606.unitypackageをunityにインポートしてください。\n\nプレファブをヒエラルキーに入れアバターのhipボーンの階層等においてください。\n\n\n 　利用規約\n\n対象コンテンツの利用権利の販売となります。\nコンテンツを改変および任意メディアで利用することができます。\n\n\n\nただし下記を禁止します。\n\n\n\n　他人が利用できるようにし、著作者の販売を阻害すること。\n\n　コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。\n　利用権利は他人に譲渡することができません。\n\n\n その他\n\n　 コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。\n\n\nこのライセンスにおける解説情報は下記になります。\n\nhttps://gitlab.com/towelfunnelvrc/towel-license/blob/master/%E8%B2%A9%E5%A3%B2%E7%94%A8.md\nhttps://gitlab.com/towelfunnelvrc/towel-license/-/wikis/home\n（タオルライセンス 販売用 version0.9）\n　　　　\nシェーダーにUnlit_WF_Shaderを使わせてもらっています。\n\n(https://github.com/whiteflare/Unlit_WF_ShaderSuite/releases)\n\n作成者　KK","url":"https://booth.pm/ja/items/1291724","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/59f43df1-17f0-49b3-ad41-47c8b0d2ce1f/i/1291724/57f6b137-3a99-4fcd-b56f-a1e1dbfd43af_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2+Ma7J243KNMOGlkhQo1QeaAep3Br0ZUrobN67sEakY="></script>
+    nonce="nuyUM8WafKpXOFJxLFYUM4HMgQZjmNrFWjA4vhCDX9g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -553,7 +553,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;},{&quot;label&quot;:&quot;ドールズ パーティー49&quot;,&quot;value&quot;:&quot;dollsparty49&quot;},{&quot;label&quot;:&quot;J.GARDEN53&quot;,&quot;value&quot;:&quot;j-garden53&quot;}]"
+    "[{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
